<resources>
    <string name="app_name">F.R.E.D</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Einstellungen</string>
    <string name="title_dashboard">Gespeicherte Netzwerke löschen</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="waiting_for_scan">Messung wird vorbereitet</string>
    <string name="ssid_unknown">unsichtbare SSID</string>
    <string name="last_scan_resulted_empty">die letzte Prüfung fand keine WLAN Stationen</string>
    <string name="and_x_other">und %1$d weitere&#8230;</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_title_display_name">Nickname (freiwillig)</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_tile_server_url">URL des Tile-Servers (OSM)</string>
    <string name="pref_default_tile_server_url">https://maps.wikimedia.org/osm-intl</string>

    <string name="pref_title_ssids">Zu vermessende Netzwerke</string>
    <string name="pref_default_ssids">[\"Adelt-IT 5.0 GHZ\", \"Adelt-IT 2.4 GHZ\", \"ADELT00 Gastzugang\", \"Freifunk\"]</string><!-- todo: for testing, only add relevant ssids here -->

    <string name="pref_title_upload_url">URL der Gegenstelle</string>
    <string name="pref_default_upload_url">https://fredbackend.ffmsl.de</string>

    <string name="pref_title_upload_only_wifi">Nur über WLAN synchronisieren</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Synchronisierung</string>
    <string name="pref_header_import">Konfiguration laden</string>
    <string name="pref_title_sync_frequency">Synchronisationsintervall</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 Minuten</item>
        <item>30 Minuten</item>
        <item>1 Stunde</item>
        <item>3 Stunden</item>
        <item>6 Stunden</item>

    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>

    </string-array>


    <string name="pref_title_scan_frequency_time">Messintervall Zeit (Sekunden)</string>
    <string-array name="pref_scan_frequency_time_titles">
        <item>20 Sekungen</item>
        <item>30 Sekunden</item>
        <item>1 Minute</item>
        <item>5 Minuten</item>

    </string-array>
    <string-array name="pref_scan_frequency_time_values">
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>300</item>
    </string-array>

    <string name="pref_title_scan_frequency_distance">Distanz (Meter)</string>
    <string-array name="pref_scan_frequency_distance_titles">
        <item>5 Meter</item>
        <item>10 Meter</item>
        <item>20 Meter</item>
        <item>30 Meter</item>

    </string-array>
    <string-array name="pref_scan_frequency_distance_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string-array name="pref_scan_time_to_stop_titles">
        <item>nie</item>
        <item>nach 1 Minute</item>
        <item>nach 15 Minuten</item>
        <item>nach 30 Minuten</item>
        <item>nach 1 Stunde</item>
        <item>nach 2 Stunden</item>
        <item>nach 4 Stunden</item>
        <item>nach 8 Stunden</item>
        <item>nach 12 Stunden</item>
        <item>nach 16 Stunden</item>
        <item>nach 24 Stunden</item>
    </string-array>

    <string-array name="pref_scan_time_to_stop_values">
        <item>0</item>
        <item>60</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
        <item>14400</item>
        <item>28800</item>
        <item>43200</item>
        <item>57600</item>
        <item>86400</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Netzwerkscan</string>

    <string name="auto_upload">Automatisch synchronisieren</string>

    <string name="record_on">Aufzeichnung an</string>
    <string name="record_off">Aufzeichnung aus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_network_list">Netzwerkliste</string>
    <string name="sync_networks_to_scan_now">Netzwerkliste wird von der Gegenstelle geladen</string>
    <string name="sync_now">Jetzt Synchronisieren</string>
    <string name="download_configuration_now">Jetzt Laden</string>
    <string name="network_scan_group">Messbedingungen</string>
    <string name="network_group">Netzwerkbedingungen</string>
    <string name="sync_settings">Konfiguration der Gegenstelle wird geladen</string>
    <string name="pref_title_download_url">URL der Gegenstelle</string>
    <string name="data_import_button">data_import_button</string>
    <string name="start_app_string">App initialisieren</string>
    <string name="start_app_explanation">F.R.E.D benötigt Zugriff auf Ihren Standort. Wurde die App gestartet, ohne die entsprechende Berechtigung, erscheint dieser Bildschirm. Bitte erlauben Sie der App den Zugriff auf Ihren Standort und initialisieren Sie die App über den angezeigten Knopf. Ihre Standortdaten werden ausschließlich anonymisert gespeichert</string>
    <string name="data_upload_button">data_upload_button</string>
    <string name="upload_data">Gesammelte Netzwerkdaten jetzt hochladen</string>
    <string name="last_scan_result">Letzte Netzwerke: </string>
    <string name="scan_found_x">Erkannte Netzwerke: </string>
    <string name="add_ssid_dialog_title">SSID hinzufügen</string>
    <string name="add">Hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="remove_ssid_dialog_title">SSID entfernen?</string>
    <string name="remove">Entfernen</string>
    <string name="gps_disabled">Bitte aktivieren Sie GPS</string>
    <string name="error_000">Error 000: Gegenstellenzugriff zur Synchronisation konnten nicht hergestellt werden</string>
    <string name="scans_synced_successfully">Netzwerke wurden erfolgreich synchronisiert</string>
    <string name="error_001">Error 001: Die Netzwerksynchronisation konnte nicht abgeschlossen werden</string>
    <string name="no_new_scans_to_upload">Es gibt keine weiteren Scans zum hochladen</string>
    <string name="no_scan_so_far">Bisher wurden keine Daten gesammelt</string>
    <string name="gps_enabled">GPS wurde aktiviert, warte auf Scan</string>
    <string name="travelled_distance_not_far_enough">Die zurückgelegte Strecke war seit der letzen Messung zu gering (%1$d von %2$d Meter)</string>
    <string name="osm_copyright">© OpenStreetMap-Mitwirkende</string>
    <string name="osm_copyright_href">https://www.openstreetmap.org/copyright</string>
    <string name="app_is_inactive">FRED App ist inaktiv</string>
    <string name="app_is_active">FRED App ist aktiv</string>
    <string name="please_activate_gps">Bitte aktivieren Sie GPS</string>
    <string name="please_activate_gps_long">Bitte aktivieren Sie GPS, damit die FRED App weiterhin genutzt werden kann. Tippen um den FRED Dienst zu beenden</string>
    <string name="stop_fred_service">FRED Dienst beenden</string>
    <string name="insufficent_accuracy">Die GPS-Genauigkeit (%1$d Meter) war zu gering für eine Messung</string>
    <string name="pref_title_scan_frequency_accuracy">Min. GPS Genauigkeit (Meter)</string>
    <string name="statistic_unsynced_scans">Scans seit letztem Upload: %1$d</string>
    <string name="statistic_last_upload">Letzter Upload: %1$s</string>
    <string name="touch_to_stop">Tippen zum beenden</string>
    <string name="please_enable_wifi">Tippen zum Beenden</string>
    <string name="app_is_inactive_no_wifi">FRED App benötigt WLAN</string>
    <string name="latitude">Breitengrad</string>
    <string name="longitude">Längengrad</string>
    <string name="networks_deleted">Netzwerke gelöscht.</string>
    <string name="pref_title_scan_time_to_stop">Dienst automatisch beenden</string>
    <string name="app_auto_disabled">FRED - Zeit abgelaufen</string>
    <string name="open_app_to_restart">Der Dienst wurde deaktiviert</string>
    <string name="initializing_scan">Messung wird vorbereitet...</string>
    <string name="starting_synchronization">Messdaten werden zur hinterlegten Gegenstelle hochgeladen</string>
    <string name="record">Aufzeichnung</string>
    <string name="error_002">Error: 002: Die Synchronisation konnte nicht abgeschlossen werden. Die Verbindung zur Gegenstelle war erfolgreich, die Antwort enthielt allerdings Fehler</string>
    <string name="error_003">Error: 003: Allgemeiner Synchronisierungsfehler</string>
    <string name="synced_successfully">Synchronisierung erfolgreich</string>
    <string name="logs_synced_successfully">Absturzberichte wurden erfolgreich hochgeladen</string>
    <string name="empty"></string>


</resources>
