<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/network_scan_group">
        <de.florian_adelt.fred.settings.NumberPickerPreference
            android:defaultValue="20"
            android:key="scan_frequency_time"
            android:title="@string/pref_title_scan_frequency_time" />

        <de.florian_adelt.fred.settings.NumberPickerPreference
            android:defaultValue="10"
            android:key="scan_frequency_distance"
            android:title="@string/pref_title_scan_frequency_distance" />

        <de.florian_adelt.fred.settings.NumberPickerPreference
            android:defaultValue="15"
            android:key="scan_frequency_accuracy"
            android:title="@string/pref_title_scan_frequency_accuracy" />

        <Preference android:title="@string/pref_title_ssids"
            android:key="target_ssids_button"
            android:summary=""/>
    </PreferenceCategory>

    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_ssids"
        android:inputType="textCapWords"
        android:key="target_ssids"
        android:maxLines="100"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_ssids" />-->



    <PreferenceCategory android:title="Karteneinstellungen">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_tile_server_url"
            android:inputType="textUri"
            android:key="tile_server_url"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_tile_server_url" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Akku sparen">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_scan_time_to_stop_titles"
            android:entryValues="@array/pref_scan_time_to_stop_values"
            android:key="scan_time_to_stop"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_scan_time_to_stop" />
    </PreferenceCategory>



</PreferenceScreen>
