<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="de.florian_adelt.fred.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/pref_header_notifications" />

    <header
    android:fragment="de.florian_adelt.fred.SettingsActivity$DataSyncPreferenceFragment"
    android:icon="@android:drawable/ic_menu_upload"
    android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="de.florian_adelt.fred.SettingsActivity$ImportPreferenceFragment"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/pref_header_import" />

</preference-headers>
