<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/network_settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:srcCompat="@android:drawable/ic_menu_mylocation" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:textSize="18sp"
                android:paddingTop="12dp"
                android:text="@string/pref_header_notifications" />
        </TableRow>

        <TableRow
            android:id="@+id/synchronization_settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:srcCompat="@android:drawable/ic_menu_upload" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:textSize="18sp"
                android:paddingTop="12dp"
                android:text="@string/pref_header_data_sync"/>
        </TableRow>

        <TableRow
            android:id="@+id/load_settings_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                app:srcCompat="@android:drawable/ic_menu_more" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingStart="8dp"
                android:textSize="18sp"
                android:paddingTop="12dp"
                android:text="@string/pref_header_import" />
        </TableRow>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>